Update 2. Tableau vision ov COVID-19 vaccinations.md

--- a/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
+++ b/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
@@ -1,4 +1,4 @@
-Tableau vision on world statistics about partial and fully vaccinations per country.
+Tableau [vision](https://public.tableau.com/app/profile/lefteris.x/viz/COVID-19Vaccinations_16742974109580/GlobalVaccineTracker) on world statistics about partial and fully vaccinations per country.
 From the right we can select individual country or continent as well as the desired date
 
 
