Update 2. Tableau vision ov COVID-19 vaccinations.md

--- a/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
+++ b/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
@@ -2,6 +2,6 @@ Tableau [vision](https://public.tableau.com/app/profile/lefteris.x/viz/COVID-19V
 From the right we can select individual country or continent as well as the desired date
 
 
-https://public.tableau.com/app/profile/lefteris.x/viz/COVID-19Vaccinations_16742974109580/GlobalVaccineTracker
 
-Link to dataset: https://drive.google.com/drive/folders/1JFJ8_mzXTr_xPbS-4qWqpJsOQCnazrxC
+
+Link to dataset [here](https://drive.google.com/drive/folders/1JFJ8_mzXTr_xPbS-4qWqpJsOQCnazrxC)
