--- a/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
+++ b/SQL-Tableau Projects/2. Tableau vision ov COVID-19 vaccinations.md
@@ -1,7 +1,7 @@
 Tableau [vision](https://public.tableau.com/app/profile/lefteris.x/viz/COVID-19Vaccinations_16742974109580/GlobalVaccineTracker) on world statistics about partial and fully vaccinations per country.
-From the right we can select individual country or continent as well as the desired date
+From the right we can select individual country or continent as well as the desired date.
 
 
 
 
-Link to dataset [here](https://drive.google.com/drive/folders/1JFJ8_mzXTr_xPbS-4qWqpJsOQCnazrxC)
+Link to dataset [here](https://drive.google.com/drive/folders/1JFJ8_mzXTr_xPbS-4qWqpJsOQCnazrxC).
